--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_styled_toast: ^2.1.3
+  flutter_svg: ^2.0.5
+  flutter_screenutil: ^5.7.0
+  cached_network_image: ^3.2.3
+  lottie: ^2.3.2
+  animate_do: ^3.0.2
+  intl: ^0.17.0
+  image_picker: ^1.0.4
+
 
 dev_dependencies:
   flutter_test:
@@ -59,9 +68,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
